# New-Horizons-Gateway

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.json  docker-compose.container-discovery.yml  docker-compose.yml  pyproject.toml  requirements.txt
newhorizons_gateway/: __init__.py  arduino_protocol.py  boot_state.py  bootloader.py  config_store.py  console_runtime.py  discovery.py  gateway_tui.py  local_device.py  main.py  queueing.py  result_chunks.py  state.py  udp_control.py  update_manager.py  upstream_wss.py  web.py
releases/: gateway-latest.json
releases/notes/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md  v0.2.0.md  v0.2.3.md  v0.2.4.md  v0.2.5.md  v0.2.6.md  v0.2.7.md  v0.2.8.md  v0.2.9.md  v0.3.0.md  v0.3.1.md  v0.3.2.md  v0.3.3.md  v0.4.0.md  v0.4.1.md  v0.4.2.md  v0.5.0.md  v0.5.1.md  (+1 more)
scripts/: discovery_proxy.py  start.ps1  start.py  start.sh  start_docker.ps1  start_docker.sh  start_gateway.sh  start_gateway_host.sh  start_gateway_windows.ps1  start_runtime.py  stop.ps1  stop.py  stop.sh  stop_docker.ps1  stop_docker.sh  stop_gateway_host.sh
tests/: test_arduino_protocol.py  test_discovery_proxy.py  test_gateway_boot_state.py  test_gateway_bootloader.py  test_gateway_config.py  test_gateway_console_runtime.py  test_gateway_discovery.py  test_gateway_heartbeat_static.py  test_gateway_main.py  test_gateway_release_static.py  test_gateway_state.py  test_gateway_update_manager.py  test_gateway_web_ui.py  test_result_chunks.py  test_udp_control.py  test_upstream_wss.py
