[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "newhorizons-gateway"
version = "0.5.1"
requires-python = ">=3.9"
dependencies = [
    "Flask==3.0.3",
    "websocket-client==1.8.0",
    "textual>=0.70,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["newhorizons_gateway*"]
